--- a/firstsite/index.html
+++ b/firstsite/index.html
@@ -4,48 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
     <title>My First Html</title>
 </head>
 <body>
-    <h1>seagulls</h1>
-    <img src="img/seagull.jpg" alt="">
-    <h3>foods</h3>
-    <ul>
-        <li>Pasta</li>
-    </ul>
-    <ol>
-        <li>autumn</li>
-        <li>spring</li>
-        <li>winter</li>
-        <li>summer</li>
-    </ol>
+    <div id="top">
+            <h1>seagulls</h1>
+    </div>
     <p>i wanted to join code nation to expand my knowledge</p>
     <p>in week 1 i wanted to get all the challenges done, and i managed to do it</p>
-    <h4>www.google.com   www.l.com</h4>
-
-    <style>
-        img{
-            height:300px;
-            width:400px;
-        }
-        ul{
-            color:whitesmoke;
-            font-style:unset;
-            font-size:20px;
-        }
-        ol{
-            color:whitesmoke;
-            font-size:20px;
-        }
-        h1{
-            color:lightcoral;
-            font-style: oblique;
-            border: none;
-        }
-        body{
-            background-color: lightblue;
-            text-align:center;
-        }
-    </style>
+    <div id="buttons">
+        <button type='button' onClick='page2()'>go to seccond page</button>
+        <button type='button' onClick='page3()'>go to Third page</button>
+        <button type='button' onClick='page4()'>go to Fourth page</button>
+        <button type='button' onClick='page5()'>go to Fifth page</button>
+        <button type='button' onClick='page6()'>go to Sixth page</button>
+        <button type='button' onClick='page7()'>go to Seventh page</button>
+        <button type='button' onClick='page8()'>go to Eighth page</button>
+        <button type='button' onClick='page9()'>go to Ninth page</button>
+    </div>
 </body>
+<script src='js/main.js'></script>
 </html>
